# my_future_mail_backend

./: Cargo.toml  ReadMe.md
api/: .gitignore  Cargo.toml  ReadMe.md
api/migrations/: 20250318223422_create_scheduled_emails_table.sql
api/scripts/: create_and_migrate_db.sh
api/src/: lib.rs
api/tests/: api_tests.rs  hello_world.rs
database/: Cargo.toml  readMe.md
database/migrations/: 20250316200312_create_scheduled_emails_table.sql
database/src/: main.rs
src/: lib.rs  main.rs
tests/: api_tests.rs  hello_world.rs
