[package]
name = "my_future_mail_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
hyper = "1.6.0"
lettre = "0.11.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
tower = "0.5.2"
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio-native-tls", "macros" ] }
dotenv = "0.15.0"
